feat: repository, route e service de message | swagger e server atualizados
